sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: not found: value True
    if (plusPetit(i+1,i)==True) {
                          ^